Provide Travis CI a Db config now that database.yml is ignored

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
 env:
   - MEETUP_API_KEY=secret_key
 script:
+  - cp config/database.example.yml config/database.yml
   - RAILS_ENV=test bundle exec rake --trace db:setup
   - RAILS_ENV=test bundle exec rake --trace db:migrate
   - RAILS_ENV=test bundle exec rake --trace db:test:prepare
