--- a/config/cable.yml
+++ b/config/cable.yml
@@ -7,3 +7,9 @@ test:
 production:
   adapter: redis
   url: redis://localhost:6379/1
+  channel_prefix: cincirb_production
+
+staging:
+  adapter: redis
+  url: redis://localhost:6379/1
+  channel_prefix: cincirb_staging
