--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,12 +4,12 @@ development:
 test:
   adapter: async
 
-production:
-  adapter: redis
-  url: redis://localhost:6379/1
-  channel_prefix: cincirb_production
-
 staging:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
   channel_prefix: cincirb_staging
+
+production:
+  adapter: redis
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  channel_prefix: cincirb_production
