--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,10 +20,6 @@ Layout/LineLength:
   Exclude:
     - config/**/*
     - spec/**/*
-Layout/SpaceBeforeBrackets:
-  Enabled: true
-Lint/AmbiguousAssignment:
-  Enabled: true
 Lint/DuplicateBranch:
   Enabled: true
 Lint/DuplicateRegexpCharacterClassElement:
@@ -35,8 +31,6 @@ Lint/EmptyClass:
 Lint/NoReturnInBeginEndBlocks:
   Enabled: true
 Lint/ToEnumArguments:
-  Enabled: true
-Lint/UnexpectedBlockArity:
   Enabled: true
 Lint/UnmodifiedReduceAccumulator:
   Enabled: true
@@ -79,8 +73,6 @@ Rails/ActiveRecordCallbacksOrder:
   Enabled: true
 Rails/AfterCommitOverride:
   Enabled: true
-Rails/AttributeDefaultBlockValue:
-  Enabled: true
 Rails/FindById:
   Enabled: true
 Rails/Inquiry:
@@ -109,8 +101,6 @@ Rails/UnknownEnv:
     - staging
     - development
     - test
-Rails/WhereEquals:
-  Enabled: true
 Rails/WhereExists:
   Enabled: true
 Rails/WhereNot:
@@ -128,6 +118,9 @@ RSpec/MultipleExpectations:
   Enabled: true
   Exclude:
     - spec/system/**/*
+RSpec/NestedGroups:
+  Enabled: true
+  Max: 4
 Style/ArgumentsForwarding:
   Enabled: true
 Style/BlockComments:
@@ -147,8 +140,6 @@ Style/DocumentDynamicEvalDefinition:
 # TODO: Enable for Ruby 3.0 upgrade
 Style/FrozenStringLiteralComment:
   Enabled: false
-Style/HashExcept:
-  Enabled: true
 Style/Lambda:
   EnforcedStyle: literal
 Style/NegatedIfElseCondition:
