--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -42,6 +42,9 @@ Metrics/BlockLength:
     - '**/*.rake'
     - 'config/**/*.rb'
     - 'spec/**/*.rb'
+Metrics/ModuleLength:
+  Exclude:
+    - 'spec/**/*.rb'
 Performance/AncestorsInclude:
   Enabled: true
 Performance/ArraySemiInfiniteRangeSlice:
