--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -58,7 +58,7 @@ jobs:
         run: bin/rubocop --parallel
 
   deploy:
-    needs: [build, lint]
+    needs: [test, lint]
     env:
       FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
     if: github.ref == 'refs/heads/main'
