fix VCR issue in CI * remove VCR which is no longer needed due to removal of Meetup.com integration * databse config clean-up * use same postgresql version as production * make BlueskyClient a bit more informative on failure

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,13 +1,16 @@
-development:
+default: &default
   adapter: postgresql
-  database: cincyrb_development
+  host: localhost
+  port: 5432
+  username: postgres
   pool: 5
   min_messages: 'warning'
   encoding: utf8
 
-test: &test
-  adapter: postgresql
+development:
+  <<: *default
+  database: cincyrb_development
+
+test:
+  <<: *default
   database: cincyrb_test
-  pool: 5
-  min_messages: 'warning'
-  encoding: utf8
